[package]
name = "bitness"
version = "0.4.0"
authors = ["Kjartan F. Kvamme <forbjok@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Rust library for detecting OS bitness independently of the executable's bitness. Windows, GNU/Linux and FreeBSD currently supported."
repository = "https://github.com/forbjok/rust-bitness"
readme = "README.md"

[dependencies]
thiserror = "1.0.22"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["sysinfoapi"] }

[target.'cfg(all(unix, not(target_os = "freebsd")))'.dependencies]
uname = "0.1.1"

[target.'cfg(target_os = "freebsd")'.dependencies]
sysctl = "0.4.0"
